Fix spacing around certain elements

--- a/css/telepathy.less
+++ b/css/telepathy.less
@@ -37,6 +37,14 @@ input, select, button {
 	font-size: inherit;
 }
 
+input, select, button, img, a {
+	margin-right: 5px;
+
+	&:last-child {
+		margin-right: 0;
+	}
+}
+
 button {
 	cursor: pointer;
 	color: #fff;
@@ -114,6 +122,7 @@ fieldset {
 				vertical-align: text-top;
 				margin-top: 4px;
 				margin-bottom: -4px;
+				margin-right: 3px;
 			}
 
 	fieldset div {
